# tsp-optimization

./: .gitignore  README.md  random_instance_gen.py
part_one/: .gitignore  CMakeLists.txt  Makefile  benchmark.sh  first.cpp  notes.md  notes.txt  tsp.lp  tsp.sol
part_one/helper/: instance_gen.py  plot.py
part_one/include/: constants.h  cpxmacro.h  time_logger.h
part_one/include/graph/: graph.h
part_one/include/model/: variable.h
part_one/include/tsp/: formulation.h  gavish_graves_formulation.h  graph.h  miller_tucker_zemlin_formulation.h
part_one/include/utils/: constraints.h  measurements.h  time_logger.h  typedefs.h  variables.h
part_one/input/: graph.txt
part_one/samples/: graph.txt  random100.txt  random_20_gg.sol  random_50_gg.sol  random_5_gg.sol
part_one/scripts/: benchmark.py  instance_gen.py  plot.py
part_one/src/: main.cpp
part_one/src/graph/: graph.cpp
part_one/src/tsp/: formulation.cpp  gavish_graves_formulation.cpp  graph.cpp  miller_tucker_zemlin_formulation.cpp
part_one/src/utils/: constraints.cpp  time_logger.cpp  variables.cpp
part_two/: .gitignore  CMakeLists.txt  Makefile  benchmark.sh  plot.py
part_two/include/genetic_algorithm/: genetic_algorithm.h  grid_search.h  hyper_params.h
part_two/include/genetic_algorithm/chromosome/: chromosome.h  tsp_path_chromosome.h
part_two/include/genetic_algorithm/crossover/: crossover_op.h  edge_recombination_crossover.h  order_crossover.h  (+1 more)
part_two/include/tsp/: graph.h  node.h
part_two/include/utils/: logger.h  maths.h  path.h  time_logger.h  typedefs.h
part_two/samples/: bayg29_sol.ga  random64_sol.ga  random_5_sol.ga
part_two/scripts/: instance_gen.py
part_two/src/: main.cpp
part_two/src/genetic_algorithm/: genetic_algorithm.cpp  grid_search.cpp
part_two/src/tsp/: graph.cpp
part_two/src/utils/: logger.cpp  time_logger.cpp
(+55 files in other folders)
